# pvector

./: .gitignore  CoreDump.hs  README.md  RULES-COMPARISON.md  baseline.csv  flake.nix  pvector.cabal  round1.csv  round2.csv  round3.csv  round4.csv  shell.nix  stack.yaml
bench/: BenchAll.hs  Main.hs  gen-charts.py  results.csv
cbits/: CloneAndSet.cmm
core-inspect/: Inspect.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.6/: package.cache  pvector-0.2.0.0-inplace.conf
src/Data/: PVector.hs
src/Data/PVector/: Back.hs  Deque.hs  Front.hs  Internal.hs
src/Data/PVector/Internal/: ChunkedBundle.hs  Stream.hs
src/Data/Vector/: Internal.hs  Persistent.hs  Transient.hs
src/Data/Vector/Internal/: .Transient.hs.swp  Persistent.hs  Transient.hs
test/: Fuzz.hs  Main.hs
