cabal-version:       3.0
name:                pvector
version:             0.2.0.0
synopsis:            Persistent vectors with transients, inspired by Clojure
description:
  Efficient persistent (immutable) vector implementations based on
  bit-partitioned array mapped tries with 32-way branching.
  .
  Provides three vector variants:
  .
  * @Data.PVector.Back@ — snoc-efficient (append to back)
  * @Data.PVector.Front@ — cons-efficient (prepend to front)
  * @Data.PVector.Deque@ — efficient at both ends
  .
  Each variant supports transient (mutable) counterparts for
  batch operations. Includes stream fusion via GHC rewrite rules.
homepage:            https://github.com/iand675/pvector
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
category:            Data
build-type:          Simple

library
  exposed-modules:     Data.PVector
                     , Data.PVector.Back
                     , Data.PVector.Front
                     , Data.PVector.Deque
  other-modules:       Data.PVector.Internal
                     , Data.PVector.Internal.Stream
  build-depends:       base >= 4.16 && < 5
                     , deepseq >= 1.4
                     , primitive >= 0.7.3
  hs-source-dirs:      src
  default-language:    GHC2021
  ghc-options:         -O2
                       -Wall
                       -Wno-name-shadowing
                       -fmax-simplifier-iterations=10
                       -fdicts-cheap
                       -fspec-constr-count=6

benchmark bench-pvector
  type:             exitcode-stdio-1.0
  hs-source-dirs:   bench
  main-is:          Main.hs
  build-depends:    base
                  , deepseq
                  , criterion
                  , vector
                  , pvector
                  , random
  default-language: GHC2021
  ghc-options:      -O2 -rtsopts

test-suite test-pvector
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:    base
                  , pvector
                  , tasty
                  , tasty-hunit
                  , hedgehog
                  , tasty-hedgehog
  default-language: GHC2021
  ghc-options:      -O2 -rtsopts -threaded
